--- a/academy_xiaowei/task1_xiaowei.html
+++ b/academy_xiaowei/task1_xiaowei.html
@@ -6,6 +6,7 @@
 <title>ife2017_小薇学院_任务一_零基础HTML编码</title>
 </head>
 <body>
+<header>
 <h1>网站一级标题</h1>
 <ul>
 	<li><a href="#">导航链接一</a></li>
@@ -13,12 +14,16 @@
 	<li><a href="#">导航链接三</a></li>
 	<li><a href="#">导航链接四</a></li>
 </ul>
+</header>
+<article>
 <h2>文章一级标题</h2>
 <h2>文章二级标题</h2>
 <p><span>文章作者</span> <span>文章发表时间</span></p>
 <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
 <img src="xwtask1_1.png" alt="">
 <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" target="_blank">这里有一个链接点击后打开新窗口链接到http:/ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+</article>
+<article>
 <h2>另一篇文章一级标题</h2>
 <h2>文章二级标题</h2>
 <p><span>文章作者</span> <span>文章发表时间</span></p>
@@ -29,6 +34,8 @@
 	<li>列表项目二</li>
 	<li>列表项目三</li>
 </ul>
+</article>
+<section>
 <h2>图片</h2>
 <dl>
 	<dd>好看的图片<br/><img src="xwtask1_1.png" alt=""></dd>
@@ -51,6 +58,8 @@
 </dl><dl>
 	<dd>好看的图片<br/><img src="xwtask1_1.png" alt=""></dd>
 </dl>
+</section>
+<section>
 <h2>最后一篇文章一级标题</h2>
 <h2>文章二级标题</h2>
 <p><span>文章作者</span> <span>文章发表时间</span></p>
@@ -68,6 +77,8 @@
 	<tr><td>表内容单元格</td><td>表内容单元格</td><td><a href="#">操作</a></td></tr>
 	<tr><td>总计</td><td colspan="2">1000</td></tr>
 </table>
+</section>
+<aside>
 <h2>这里以后是一个侧栏，这是侧栏的标题</h2>
 <h2>侧栏注册窗口标题</h2>
 <form>
@@ -77,6 +88,7 @@
 <p>密码请为6-16位英文数字</p>
 <label>性别：</label><input type="radio" value="male" checked="checked">男<input type="radio" value="female">女 <label>城市：</label><select><option value="beijing">北京</option><option value="shanghai">上海</option></select> <label>爱好：</label><input type="checkbox" value="sport">运动<input type="checkbox" value="art">艺术<input type="checkbox" value="science">科学 <label>个人描述：</label><textarea cols="22" rows="2">这是一个多行输入框，输入您的个人描述</textarea> <input type="submit" value="确认提交">
 </form>
-<p>版权所有©️</p>
+</aside>
+<footer><p>版权所有©️</p></footer>
 </body>
 </html>
