小薇学院-任务二

--- a/academy_xiaowei/task2_xiaowei.html
+++ b/academy_xiaowei/task2_xiaowei.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>ife2017_小薇学院_任务一_零基础HTML编码</title>
+<title>ife2017_小薇学院_任务二_零基础HTML及CSS编码（一）</title>
+<link rel="stylesheet" href="css/task2_xiaowei.css">
 </head>
 <body>
 <header>
